--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <title>My Personal Website</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Hello World!</h1>
+    <h2>Welcome to my Website!</h2>
   </body>
 </html>
