--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <h2>Welcome to my Website!</h2>
+    <script src="script.js"></script>
   </body>
 </html>
