Website Layout Code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello World!</h1>
     <script src="script.js"></script>
+    <header class="top-header">
+      <div class="center-section">
+        <h1>Aaron Gholson</h1>
+      </div>
+    </header>
+    <div class="left-half">
+      <div class="left-center-section">
+        <h1>Software Engineer</h1>
+        <p>I started my Software Engineering career online at Flatiron School!</p>
+      </div>
+      
+    </div>
+    <div class="right-half">
+      <div class="right-center-section">
+        <h1>Content Creator</h1>
+        <p>I'm the creator of an entertainment brand called LegendDairy Productions!</p>
+      </div>
+      
+    </div>
   </body>
 </html>
