--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div class="left-center-section">
         <h1>Software Engineer</h1>
         <p>I started my Software Engineering career online at Flatiron School!</p>
+        <img src="https://jobboardhq.blob.core.windows.net/assets/prod/cnne/tm2l/employerLogo.png?v=191120032141" alt="Flatiron School Logo" width="500" height="150">
       </div>
       
     </div>
@@ -22,6 +23,7 @@
       <div class="right-center-section">
         <h1>Content Creator</h1>
         <p>I'm the creator of an entertainment brand called LegendDairy Productions!</p>
+        <img src="D:\Youtube Content\Channel Files\Final Images\LDLogoLong_Shadow.png" alt="LegendDairy Logo" width="600" height="130">
       </div>
       
     </div>
