Right Panel Complete

--- a/index.html
+++ b/index.html
@@ -15,15 +15,30 @@
       <div class="left-center-section">
         <h1>Software Engineer</h1>
         <p>I started my Software Engineering career online at Flatiron School!</p>
-        <img src="https://jobboardhq.blob.core.windows.net/assets/prod/cnne/tm2l/employerLogo.png?v=191120032141" alt="Flatiron School Logo" width="500" height="150">
+        <img src="C:\Users\Aaron Gholson\OneDrive\Pictures\employerLogo.png" alt="Flatiron School Logo" width="500" height="150">
       </div>
       
     </div>
     <div class="right-half">
-      <div class="right-center-section">
+      <div class="right-center-section" >
         <h1>Content Creator</h1>
         <p>I'm the creator of an entertainment brand called LegendDairy Productions!</p>
         <img src="D:\Youtube Content\Channel Files\Final Images\LDLogoLong_Shadow.png" alt="LegendDairy Logo" width="600" height="130">
+        <p>Last year I started a Youtube channel focused around my favorite childhood videogame. Since then I've grown my brand to TikTok, Instagram, and Twitter. 
+          I'm attempting to grow a small, loyal, fan base for some plans I have in the future. I can't elaborate on these plans, but I can say they tie directly into my pursuit of a Software Engineering career.
+          If you'd like to check out my channel, feel free to click the icons below!</p>
+      <a href="https://www.youtube.com/channel/UCaYBxVkAgdgjb06GvErd3NQ">
+          <img src="C:\Users\Aaron Gholson\OneDrive\Pictures\icons8-youtube-96.png" alt="Youtube Icon8">
+      </a>
+      <a href="https://www.instagram.com/legenddairyprod/">
+        <img src="C:\Users\Aaron Gholson\OneDrive\Pictures\icons8-instagram-96.png" alt="Instagram Icon8">
+      </a>
+      <a href="https://www.tiktok.com/@legenddairyprod">
+        <img src="C:\Users\Aaron Gholson\OneDrive\Pictures\icons8-tiktok-96.png" alt="TikTok Icon8">
+      </a>
+      <a href="https://twitter.com/LegendDairyProd">
+        <img src="C:\Users\Aaron Gholson\OneDrive\Pictures\icons8-twitter-96.png" alt="Twitter Icon8">
+      </a>
       </div>
       
     </div>
